--- a/index-async.html
+++ b/index-async.html
@@ -34,7 +34,7 @@
       'js/directives.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
+      angular.bootstrap(document, ['F1FeederApp']);
     });
   </script>
   <title>My AngularJS App</title>
