--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </head>
 </head>
 <body ng-app="F1FeederApp">
-	<div class="container" ng-controller="seasonsController">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<div class="" ng-controller="seasonsController">
+		<nav class="navbar navbar-default" role="navigation">
 			
 		  <div class="navbar-header">
 		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
@@ -58,7 +58,7 @@
 		</nav><!-- /navbar -->
 		
 	</div>
-	<div class="container" style="margin-top:50px;">
+	<div class="container">
   <ng-view></ng-view>
 	</div>
 </body>
