--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
 </head>
 <body ng-app="F1FeederApp">
-	<div class="" ng-controller="seasonsController">
+	<div ng-controller="seasonsController">
 		<nav class="navbar navbar-default" role="navigation">
 			
 		  <div class="navbar-header">
