Added constructor and race pages

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		</form>
 	  <div class="collapse navbar-collapse" id="navbar-collapse-01">
 	    <ul class="nav navbar-nav">           
-	      <li class="active"><a href="#/2014/drivers"><span ng-bind="season"></span>Drivers</a></li>
-        <li class="active"><a href="#/2014/constructors"><span ng-bind="season"></span>Constructors</a></li>
-        <li class="active"><a href="#/2014/races">Race Schedule</a></li>
+	      <li class="active"><a href="#/current/drivers"><span ng-bind="season"></span>Drivers</a></li>
+        <li class="active"><a href="#/current/constructors"><span ng-bind="season"></span>Constructors</a></li>
+        <li class="active"><a href="#/current/races">Race Schedule</a></li>
 
 	    </ul>  
 	  </div>
