--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
   <!-- Loading Flat UI -->
   <link href="css/flat-ui.css" rel="stylesheet">
+  <!-- Loading GoogleMaps API -->
+  <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script src="http://code.angularjs.org/1.2.5/angular.js"></script>
+  <script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 
   <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -26,43 +30,9 @@
   </head>
 </head>
 <body ng-app="F1FeederApp">
-	<div ng-controller="seasonsController">
-		<nav class="navbar navbar-default" role="navigation">
-			
-		  <div class="navbar-header">
-		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
-		      <span class="sr-only">Toggle navigation</span>
-		    </button>
-		    <a class="navbar-brand" href="#">F1 Angular Demo</a>
-		  </div>
-			
-		  
-			<form role="search" class="navbar-form navbar-right">
-			<div class="dropdown navbar-right form-group">
-  			<button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Change Season<span class="caret"></span></button>
-  			<span class="dropdown-arrow"></span>
-  			<ul class="dropdown-menu" role="menu" style="overflow-y: auto; min-height: 108px; max-height: 436px;" >
-    			<li ng-repeat="s in seasonsList |orderBy: 'season':true"><a href="#/{{s.season}}/drivers/">{{s.season}}</a></li>
-  			</ul>
-			</div>
-		</form>
-	  <div class="collapse navbar-collapse" id="navbar-collapse-01">
-	    <ul class="nav navbar-nav">           
-	      <li class="active"><a href="#/current/drivers"><span ng-bind="season"></span>Drivers</a></li>
-        <li class="active"><a href="#/current/constructors"><span ng-bind="season"></span>Constructors</a></li>
-        <li class="active"><a href="#/current/races">Race Schedule</a></li>
-
-	    </ul>  
-	  </div>
 	
-			<!-- /.navbar-collapse -->
-			
-		</nav><!-- /navbar -->
-		
-	</div>
-	<div class="container">
   <ng-view></ng-view>
-	</div>
+	
 </body>
     <!-- Load JS here for greater good =============================-->
     <script src="js/jquery-1.8.3.min.js"></script>
